<?xml version="1.0" encoding="utf-8" ?>
<!--
  SPDX-FileCopyrightText: The Proton AOSP Project
  SPDX-FileCopyrightText: TheParasiteProject
  SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/screen_key_settings_page">

    <com.android.settingslib.widget.IllustrationPreference
        android:key="@string/pref_key_lottie"
        app:dynamicColor="true"
        app:lottie_rawRes="@raw/gesture_columbus" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="@string/pref_key_enabled"
        android:title="@string/setting_enabled_title"
        android:defaultValue="@bool/default_enabled" />

    <PreferenceCategory
        android:key="@string/categ_key_action"
        android:title="@string/setting_action_title" />

    <PreferenceCategory
        android:key="@string/categ_key_advanced">

        <com.android.settingslib.widget.SliderPreference
            android:key="@string/pref_key_sensitivity"
            android:title="@string/setting_sensitivity_title"
            app:textStart="@string/setting_sensitivity_light"
            app:textEnd="@string/setting_sensitivity_heavy"
            android:min="0"
            android:max="10"
            app:seekBarIncrement="1"
            app:tickMark="@android:color/transparent"
            android:selectable="true"
            android:defaultValue="@integer/default_sensitivity"
            android:dependency="@string/pref_key_enabled" />

        <com.android.settingslib.widget.SliderPreference
            android:key="@string/pref_key_haptic_intensity"
            android:title="@string/setting_haptic_intensity_title"
            app:textStart="@string/setting_haptic_intensity_light"
            app:textEnd="@string/setting_haptic_intensity_strong"
            android:min="0"
            android:max="2"
            app:seekBarIncrement="1"
            app:tickMark="@android:color/transparent"
            android:selectable="true"
            android:defaultValue="@integer/default_haptic_intensity"
            android:dependency="@string/pref_key_enabled" />

        <SwitchPreferenceCompat
            android:key="@string/pref_key_allow_screen_off"
            android:title="@string/setting_screen_off_title"
            android:summary="@string/setting_screen_off_summary"
            android:defaultValue="@bool/default_allow_screen_off"
            android:dependency="@string/pref_key_enabled" />
    </PreferenceCategory>

</PreferenceScreen>
